# ecwolf

./: .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  C89_MIGRATION_PLAN.md  CMakeLists.txt  LocateSDL2.cmake  README-libretro.md  docker.sh
android-libs/TinyXML/: CMakeLists.txt
android-libs/TouchControls/: Button.cpp  Button.h  CMakeLists.txt  JNITouchControlsUtils.cpp  JNITouchControlsUtils.h  OpenGLUtils.cpp
android-libs/launcher/: AndroidManifest.xml  CMakeLists.txt
android-libs/launcher/res/layout/: fragment_launch.xml  fragment_options.xml
android-libs/launcher/res/raw/: gamepad.txt
android-libs/launcher/src/: CMakeLists.txt
android-libs/launcher/src/com/beloko/idtech/: AboutDialog.java  AppSettings.java  CDAudioPlayer.java  GD.java  GamePadFragment.java  GenericAxisValues.java  OptionsFragment.java  QuakeControlConfig.java  QuakeControlInterpreter.java  ShowKeyboard.java  TouchControlsEditing.java  Utils.java
android-libs/libpng/: CMakeLists.txt
android-libs/sigc++/: CMakeLists.txt
bzip2/: CMakeLists.txt
docs/: README.txt  copyright  ec_changelog.txt
gdtoa/: CMakeLists.txt  g_Qfmt_p.c  g_ddfmt_p.c  g_dfmt.c  g_ffmt.c  g_ffmt_p.c  g_xLfmt.c  g_xLfmt_p.c  g_xfmt.c  g_xfmt_p.c  gdtoa.c  gdtoa.h  gdtoaimp.h
jpeg-6b/: CMakeLists.txt
lzma/: CMakeLists.txt
lzma/C/: CpuArch.h
src/: CMakeLists.txt  actor.cpp  actor.h  actordef.h  am_map.cpp  am_map.h  c_cvars.cpp  c_cvars.h  colormatcher.cpp  colormatcher.h  config.cpp  config.h  config.hpp  dc_main.cpp  dc_vmu.cpp  dc_vmu.h  dobject.cpp  dobject.h  dobjgc.cpp  f_spear.h  farchive.cpp  farchive.h  file.cpp  file.h  files.cpp  files.h  filesys.cpp  filesys.h  filesys_steam.cpp  fmopl.cpp  fmopl.h  foreign.h  fstring_c.h  g_conversation.cpp  g_conversation.h  g_intermission.cpp  g_intermission.h  g_mapinfo.cpp  g_mapinfo.h  gamemap.cpp  (+141 more)
src/actors/: scanner.cpp
src/android/: android-jni.cpp  in_android.cpp  in_android.h
src/dosbox/: dbopl.cpp  dbopl.h
src/g_blake/: a_smartanim.cpp  blake_sbar.cpp
src/g_shared/: a_ambient.cpp  a_ambient.h  a_deathcam.cpp  a_deathcam.h  a_inventory.cpp  a_inventory.h  a_keys.cpp  a_keys.h  a_patrolpoint.cpp  a_playerpawn.cpp  a_playerpawn.h  a_randomspawner.cpp
src/g_wolf/: a_spearofdestiny.cpp  wolf_sbar.cpp
src/libretro/: Makefile  Makefile.common  ecwolf_pk3_data.c  ecwolf_pk3_data.h  g_conversation.cpp  g_intermission.cpp  id_in.cpp  id_sd.cpp  id_sd_adlib.cpp  id_sd_n3dmus.cpp  id_us_1.cpp  libretro-vfs.cpp  libretro.cpp  libretro_core_options.h  state_machine.h  stubs.cpp  version.h  versiondefs.h  w32_random.cpp  wl_game.cpp  wl_inter.cpp  wl_main.cpp  wl_play.cpp  wl_text.cpp
src/libretro/jni/: Android.mk
src/macosx/: filesys.mm  filesystem.mm  install.txt  wl_iwad_picker_cocoa.mm
src/mame/: fmopl.cpp
src/r_2d/: r_draw.cpp  r_draw.h  r_drawt.cpp  r_main.cpp  r_main.h  r_things.cpp  r_things.h
src/r_data/: colormaps.cpp  colormaps.h  r_translate.cpp  r_translate.h  renderstyle.cpp  renderstyle.h
src/resourcefiles/: ancientzip.cpp  ancientzip.h  file_7z.cpp  file_audiot.cpp  file_directory.cpp  file_gamemaps.cpp  file_grp.cpp  file_lump.cpp  file_macbin.cpp  file_pak.cpp  file_rff.cpp  file_rtl.cpp  file_vgagraph.cpp  file_vswap.cpp  file_wad.cpp  file_zip.cpp  filereaderlzss.h  resourcefile.cpp  resourcefile.h  wolfmapcommon.cpp  wolfmapcommon.h
src/resources/: colormaps.cpp
src/sfmt/: SFMT.cpp  SFMT.h
src/textures/: anim_switches.cpp  animations.cpp  automaptexture.cpp  bitmap.cpp  bitmap.h  canvastexture.cpp  ddstexture.cpp  emptytexture.cpp  flattexture.cpp  imgztexture.cpp  jpegtexture.cpp  machudtexture.cpp  multipatchtexture.cpp  patchtexture.cpp  pcxtexture.cpp  picttexture.cpp  pngtexture.cpp  rawpagetexture.cpp  rottflattexture.cpp  solidtexture.cpp  texture.cpp  texturemanager.cpp  textures.h  tgatexture.cpp  warptexture.cpp  wolfrawtexture.cpp  wolfshapetexture.cpp
src/thingdef/: thingdef.cpp  thingdef.h  thingdef_codeptr.cpp  thingdef_expression.cpp  thingdef_expression.h  thingdef_parse.cpp  thingdef_parse.h  thingdef_properties.cpp  thingdef_type.cpp  thingdef_type.h
src/win32/: i_crash.cpp  i_main.cpp  vs2015hack.cpp  windows.rc  wl_iwad_win32.cpp
textscreen/: CMakeLists.txt
tools/patchutil/: bsdiff.c  bspatch.c  main.cpp  patchdata.cpp  patchdata_reg.cpp
tools/rbench/: fbench.cpp  rbench.cpp  sbench.cpp
tools/updaterevision/: CMakeLists.txt  updaterevision.c
tools/zipdir/: CMakeLists.txt  zipdir.c
wadsrc/: CMakeLists.txt  actors.txt  decorate.txt  language.enu  language.spn  language.txt  sdmmap.txt  sodmap.txt  textures.txt  wl6map.txt
wadsrc/graphics/: sodsgnon.lmp  wlfsgnon.lmp
wadsrc/static/: animdefs.txt  bs6map.txt  decorate.txt  fontdefs.txt  iwadinfo.txt  language.enu  language.spa  lockdefs.txt  n3dmap.txt  noahquiz.txt  sd2map.txt  sd3map.txt  sdmmap.txt  sndinfo.txt  sndseq.txt  sodmap.txt  textcolors.txt  textures.txt  vsimap.txt  wl1map.txt  wl1map10.txt  wl6map.txt
wadsrc/static/actors/: ambient.txt  deathcam.txt  native.txt  patrolpoint.txt
wadsrc/static/actors/blake/: blakeammo.txt  blakebarriers.txt  blakebonus.txt  blakedecorations.txt  blakedetonator.txt  blakehealth.txt  blakekeys.txt  blakemonsters.txt  blakeooze.txt  blakeplayer.txt  blakeweapons.txt
wadsrc/static/actors/noah/: noahammo.txt  noahanimals.txt  noahbonus.txt  noahdecorations.txt  noahhealth.txt  noahkeys.txt  noahplayer.txt  noahweapons.txt
wadsrc/static/actors/wolf/: angelofdeath.txt  decorations.txt  hitler.txt  macintosh.txt  rocket.txt  spearbosses.txt  spearofdestiny.txt  wolfammo.txt  wolfbonus.txt  wolfbosses.txt  wolfghosts.txt  wolfguards.txt  wolfhealth.txt  wolfkeys.txt  wolfplayer.txt  wolfweapons.txt
wadsrc/static/graphics/: sodsgnon.lmp
wadsrc/static/mapinfo/: challenge.txt  danger.txt  lostep.txt  macwolf3d.txt  noah.txt  planet.txt  spear.txt  spearcommon.txt  speardemo.txt  spearmaps.txt  wolf3d.txt  wolfcommon.txt
wadsrc/static/xlat/: challenge.txt  danger.txt  lostep.txt  macwolf3d.txt  noah.txt  planet.txt  rott.txt  sod.txt  spear.txt  wolf3d.txt
zlib/: CMakeLists.txt
(+12 files in other folders)
